public class Humidifier extends ElectricalAppliance {
    public Humidifier() {
        super();
    }

    public Humidifier(int id, String name, double price, int quantity, String model, boolean isWithBluetooth) {
        super(id, name, price, quantity, model, isWithBluetooth);
    }
}
