public class Refrigerator extends ElectricalAppliance {
    public Refrigerator() {
        super();
    }

    public Refrigerator(int id, String name, double price, int quantity, String model, boolean isWithBluetooth) {
        super(id, name, price, quantity, model, isWithBluetooth);
    }
}
