package model;

public class Fan extends ElectricalAppliance {
    public Fan() {
        super();
    }

    public Fan(int id, String name, double price, int quantity, String model, boolean isWithBluetooth) {
        super(id, name, price, quantity, model, isWithBluetooth);
    }
}
