package usb;

public interface USB {
    void open();
    void read();
    void close();
}
